# Fraud-detection-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/processed/: eda_summary.json
docs/: eda_report.md
src/api/: main.py
src/data/: eda.py  generate_data.py
src/features/: build_features.py
src/models/: train.py
tests/: test_pipeline.py
